--- a/css/styles.css
+++ b/css/styles.css
@@ -342,10 +342,10 @@ ul {
 }
 
 .cartesregroupement h2{
-    padding-left: 30px;
-    margin: 0;
+    margin: 20px;
     display: flex;
     align-items: center;
+    font-size: 22px;
 }
 
 .cartes{
@@ -361,6 +361,7 @@ ul {
     object-fit: cover;
     border-top-left-radius: 20px;   
     border-top-right-radius: 20px; 
+    padding: 0px 5px 0px 2px;
 }
 .carte{
     width: 30%;  
@@ -537,9 +538,7 @@ ul {
     color: black;
 }
  
-.activites h2{
-    margin-left: 50px;
-}
+
 .card a{
     text-decoration: none;
 }
@@ -851,6 +850,7 @@ button .fa-magnifying-glass{
 .cartespopulaires{
     width: 100%;
     border-radius: 0;
+    margin: 0px 20px;;
    }
 
 .populaires{
@@ -888,9 +888,14 @@ button .fa-magnifying-glass{
     width: 90%;
     margin: 20px;
 }
+.activites h2{
+    margin: 0px 20px;
+}
  /*footer*/
  .footer{
     flex-direction: column;
     height: 100%;
+    width: 100%;
+    margin: 0px 20px;
  }
 }
