--- a/css/styles.css
+++ b/css/styles.css
@@ -17,24 +17,21 @@ body {
 /*barre de navigation*/
 
 
-.navigation{
-    display: flex;
-    justify-content: space-around;
-  
-}
 
 .navbar {
-   width: 100%;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-}
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ }
 
 .header {
     margin: 0;
 }
 
-
+.logo{
+    padding: 0px;
+}
 .logobooki {
     width: 61.09px;
     padding: 0;
@@ -42,8 +39,6 @@ body {
   
 }
 .menu {
-    width: 381px;
-    height: 100%;
     margin: 0;
     display: flex;
     justify-content: space-around;
@@ -52,11 +47,6 @@ body {
 }
 
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-   
-}
 
 nav ul a {
     text-decoration: none;
@@ -141,6 +131,7 @@ form {
    
 }
 
+/*icone bouton recherche*/
 form i {
     background: #f2f2f2;
     padding: 10px 13px;
@@ -171,7 +162,7 @@ form button {
     font-size: 16px;
     padding: 9px 17px 8px 17px;
     cursor: pointer;
-    margin-left: -5px;
+   
 }
 
 .navfiltre{
@@ -214,7 +205,7 @@ form button {
 
 .filtres .fa-money-bill-wave {
     font-size: 22px;
-    color: #0065FC; 
+    color: #0065FC;
     margin-right: 10px; 
     cursor: pointer;
 }
@@ -334,9 +325,6 @@ ul {
 .cartesregroupement{
     width: 70%;
     background-color: #f2f2f2;
-    display: flex;
-    flex-wrap:wrap;
-    justify-content: space-between;
     border-radius: 20px;
     
 }
@@ -414,13 +402,13 @@ ul {
 
 /* Les plus populaires */
 
+/* pour l'alignement des deux sections */
 .deuxiemesection{
     width: auto;
     display: flex;
     gap: 20px;
   
 }
-
 
 
 .cartespopulaires{
@@ -605,9 +593,7 @@ ul {
         height: 2076px;
         margin: 15px;
     }
-    .navigation{
-        padding-left: 40px;
-    }
+
   
     .deuxiemesection .cartesregroupement{
         flex:50%;
@@ -629,7 +615,7 @@ ul {
     }
     .deuxiemesection{
          display: flex;
-        flex-direction: row;
+     
         justify-content: space-around;
         flex-wrap: wrap;
         row-gap: 50px;
@@ -644,12 +630,6 @@ ul {
         margin: 0;
     }
 
-    .cartes {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        
-    }
 
     /*les plus populaires*/
 
@@ -696,6 +676,10 @@ ul {
         padding-left: 30px;
     }
 
+    .cartehotel img{
+        width: 106px;
+        height: 100%;
+    }
 
     /*activités à Marseille*/
 
@@ -757,23 +741,11 @@ ul {
     .link_1{
         width: 100%;
         height: 18px;
-        font-family: "Raleway", sans-serif;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 19px;
-       
-        
     }
 
     .link_2{
         width: 100%;
         height: 18px;
-        font-family: "Raleway", sans-serif;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 19px;
-      
-      
     }
     
     .link_1:hover{
@@ -805,10 +777,10 @@ ul {
 
 .navfiltre {
     flex-direction: column;
+    padding: 0px 40px;
 }
 .navfiltre ul{
     flex-wrap: wrap;
-    justify-content: center;
 }
 .navfiltre ul li {
     width: 40%;
@@ -818,9 +790,6 @@ ul {
 
 .filtres li a {
     font-size: 11px;
-}
-.navfiltre h2 {
-    margin: 0 40px;
 }
 
 form{
