--- a/css/styles.css
+++ b/css/styles.css
@@ -740,17 +740,16 @@ ul {
     }
     .link_1{
         width: 100%;
-        height: 18px;
     }
 
     .link_2{
         width: 100%;
-        height: 18px;
     }
     
     .link_1:hover{
         border-bottom: 3px solid #0065FC;
         border-top: transparent;
+        
     }
 
     .link_2:hover{
@@ -808,14 +807,20 @@ button .fa-magnifying-glass{
 }
 
 
-    /*deuxieme section*/
-    .deuxiemesection{
+ /*deuxieme section*/
+ .recherches{
+    width: 90%;
+    margin: auto;
+ }
+
+.deuxiemesection{
         flex-direction: column-reverse;
        }
 
 .cartespopulaires{
     width: 100%;
     border-radius: 0;
+    margin: 0;
    }
 
 .populaires{
